2005-09-22  Jeremy Cribb  <jcribb@email.unc.edu>
	* load_video_tracking.m: fixed filter on older spot_tracker .vrpn.mat files.  Fixed logentry that liked to repeat itself.

2005-09-16  Jeremy Cribb  <jcribb@email.unc.edu>
	* load_vrpn_tracking.m:  new cvs updates of load_vrpn_tracking has inserted lines between code.  Removed these extra lines, because the actually break the code.

2005-09-13  Jeremy Cribb  <jcribb@email.unc.edu>
	* load_video_tracking.m:  fixed stupid logentry typo.

2005-09-13  Jeremy Cribb  <jcribb@email.unc.edu>
	* load_video_tracking.m:  fixed a bug where perfectly good timestamp files were not loaded due to getting the filename wrong.  Added logentries so that a message is printed to stdout when timestamps are/are not loaded.

2005-08-31  Kalpit Desai  <kvdesai@email.unc.edu>

	* load_vrpn_tracking.m: 

	- implemented the parsing of 'info' field and version numbers.

	- fixed the units of stage commands.

		

2005-08-10  Jeremy Cribb  <jcribb@email.unc.edu>

	* load_lasertrap_tracking.m: added back power spectrum computation.



2005-08-10  Jeremy Cribb  <jcribb@email.unc.edu>

	* load_lasertrap_tracking.m: added.  handles special needs for laser trap tracking vrpn files.



2005-07-19  Jeremy Cribb  <jcribb@email.unc.edu>

	* Changelog: fixed typo regarding date in last entry.

	* load_video_tracking: fixed similar typo in documentation.



2005-07-19  Jeremy Cribb  <jcribb@email.unc.edu>

	*	load_video_tracking: timestamps are now in unixutc format (number of secondssince 00:00:00 1970/01/01) and now two-column timestamps are handled.



2005-06-29  Jeremy Cribb  <jcribb@email.unc.edu>

	* load_video_tracking.m: makes older version imported vrpn files look like newer version imported vrpn files.



2005-06-29  Jeremy Cribb  <jcribb@email.unc.edu>

	* load_video_tracking.m: now uses video_tracking_constants for column labeling.  Fixed a 'off-by-one' bug where some beads were not counted.
